; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nilfs2/extr_sufile.c_nilfs_sufile_block_get_header.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nilfs2/extr_sufile.c_nilfs_sufile_block_get_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nilfs_sufile_header = type opaque
%struct.inode = type { i32 }
%struct.buffer_head = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.nilfs_sufile_header* (%struct.inode*, %struct.buffer_head*, i8*)* @nilfs_sufile_block_get_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.nilfs_sufile_header* @nilfs_sufile_block_get_header(%struct.inode* %0, %struct.buffer_head* %1, i8* %2) #0 {
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.buffer_head*, align 8
  %6 = alloca i8*, align 8
  store %struct.inode* %0, %struct.inode** %4, align 8
  store %struct.buffer_head* %1, %struct.buffer_head** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %6, align 8
  %8 = load %struct.buffer_head*, %struct.buffer_head** %5, align 8
  %9 = call i32 @bh_offset(%struct.buffer_head* %8)
  %10 = sext i32 %9 to i64
  %11 = getelementptr i8, i8* %7, i64 %10
  %12 = bitcast i8* %11 to %struct.nilfs_sufile_header*
  ret %struct.nilfs_sufile_header* %12
}

declare dso_local i32 @bh_offset(%struct.buffer_head*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
